--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
-<body oncontextmenu="return false" ; onload=" initGame() ">
+<body oncontextmenu="return false" onload="initGame()">
     <h1 onclick="resetGame()">Minesweeper 🙂</h1>
 
     <div class="levels"></div>
     <div class="timer">0.00</div>
-    <div class="game ">
+    <div class="game">
         <table class="center" border=1>
-            <tbody class="board ">
+            <tbody class="board">
             </tbody>
         </table>
     </div>
@@ -25,8 +25,8 @@
         <p>Hints:3</p>
         <button onclick="showHint()">Hint</button>
     </div>
-    <script src="js/utils.js "></script>
-    <script src="js/main.js "></script>
+    <script src="js/utils.js"></script>
+    <script src="js/main.js"></script>
     </body oncontextmenu="return false;>
 
 </html>
