--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <p>Hints:3</p>
         <button onclick="showHint()">Hint</button>
     </div>
-    <script src="js/utils.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../utils.js"></script>
+    <script src="../main.js"></script>
     </body oncontextmenu="return false;>
 
 </html>
