--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body oncontextmenu="return false" onload="initGame()">
@@ -25,8 +25,8 @@
         <p>Hints:3</p>
         <button onclick="showHint()">Hint</button>
     </div>
-    <script src="../utils.js"></script>
-    <script src="../main.js"></script>
+    <script src="utils.js"></script>
+    <script src="main.js"></script>
     </body oncontextmenu="return false;>
 
 </html>
