--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
     <script src="utils.js"></script>
     <script src="main.js"></script>
-    </body oncontextmenu="return false;>
+    </body>
 
 </html>
